--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Demo App</title>
+
     <link href="node_modules/@angular/material/core/theming/prebuilt/indigo-pink.css" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- FontAwesome for md-icon demo. -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="node_modules/ng2-material/ng2-material.css">
+    <link rel="stylesheet" href="node_modules/@angular/material/core/theming/prebuilt/indigo-pink.css">
+
     <base href="./">
 </head>
 <body>
 
 <div class="container">
     <demo-app></demo-app>
-    Hello world!
 </div>
-<!--<script src="./build/vendors.js"></script>-->
-<!--<script src="./build/bundle.js"></script>-->
+<script src="./build/vendors.bundle.js"></script>
+<script src="./build/app.bundle.js"></script>
 </body>
 </html>
