--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 <div class="container">
     <demo-app></demo-app>
 </div>
-<script src="./build/vendors.bundle.js"></script>
-<script src="./build/app.bundle.js"></script>
+
+<script src="build/vendors.bundle.js"></script>
+<script src="build/app.bundle.js"></script>
+
 </body>
 </html>
