chart: added chart module

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="node_modules/ng2-material/ng2-material.css">
+    <link rel="stylesheet" href="node_modules/ngx-charts/release/ngx-charts.css">
     <link rel="stylesheet" href="node_modules/@angular/material/core/theming/prebuilt/indigo-pink.css">
 
     <base href="./">
