--- a/src/home/home.html
+++ b/src/home/home.html
@@ -44,7 +44,8 @@
                 <md-icon class="md2 md-icon material-icons"> menu </md-icon>
             </button>
             something
-            <charts [data]="inputData">
+            <charts [data]="inputData"
+                    [dataLine]="lineData">
             </charts>
 
         </div>
