1. Adaugare succesiva a mai multor noduri cu relatiile lor; 2. Schimbarea culorii si a dimensiunii cercului

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -46,6 +46,8 @@
 
                                 <md-card>
 
+                                    <div class="title">Color</div>
+
                                     <md-button-toggle-group #groupColor="mdButtonToggleGroup">
                                         <md-button-toggle value="label">
                                             Type
@@ -63,7 +65,9 @@
                                             Country
                                         </md-button-toggle>
                                     </md-button-toggle-group>
-                                    <div class="example-selected-value">Selected value: {{groupColor.value}}</div>
+                                    <!--<div class="example-selected-value">Selected value: {{groupColor.value}}</div>-->
+
+                                    <div class="title">Color</div>
 
                                     <md-button-toggle-group #groupRadius="mdButtonToggleGroup">
                                         <md-button-toggle value=""> Default
@@ -75,7 +79,7 @@
                                         <md-button-toggle value="friends"> Number Of Friends
                                         </md-button-toggle>
                                     </md-button-toggle-group>
-                                    <div class="example-selected-value">Selected value: {{groupRadius.value}}</div>
+                                    <!--<div class="example-selected-value">Selected value: {{groupRadius.value}}</div>-->
 
 
                                 </md-card>
